--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<div style="text-align: center;
-		        font-size: 1.7em;
-      		  color: grey;">
+<div style="text-align: center;margin-top:25%;font-size: 1.7em;color: grey;">
 <i class="fa fa-clock-o fa-5x" aria-hidden="true"></i><br>
 		Work Under Progress
   		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
